--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,7 +13,7 @@
 		<title>About Us</title>
         <!-- Title of the webpage -->
 
-		<link rel="stylesheet" href="../style/styles.css"/>
+		<link rel="stylesheet" href="styles.css"/>
         <!-- Linking this page to the css page for styling purposes -->   
 
 	</head>
@@ -24,15 +24,15 @@
 			<!-- Logo at the top left corner of the About Us Page -->		
 			<div id="header-logo">
 			<!-- Wrap the logo in an anchor tag linking to the homepage -->
-				<a href="../main/index.html"> 
-				<img src="../logo/logo-black.svg" alt="House of CB's Logo" class="logo"/>
+				<a href="index.html"> 
+				<img src="logo-black.svg" alt="House of CB's Logo" class="logo"/>
 				</a>
 			</div>
 
 					<ul class="nav-links">
-					 <li><a href="../products/newArrivals.html">New Arrivals</a></li>
-					<li><a href="../products/dresses.html">Dresses</a></li>
-					<li><a href="../products/basics.html">Basics</a></li>
+					 <li><a href="newArrivals.html">New Arrivals</a></li>
+					<li><a href="dresses.html">Dresses</a></li>
+					<li><a href="basics.html">Basics</a></li>
 					</ul>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 
     <!-- Left side (Image) -->
     <div class="about-image">
-      <img src="../images/cb/aboutusimg.avif" alt="Contact Us Image">
+      <img src="aboutusimg.avif" alt="Contact Us Image">
     </div>			
 
 <!-- Bottom Container with HELP Section -->
@@ -52,14 +52,14 @@
         <div class="help-section">
             <h3>HELP</h3>
             <ul class="tabs">
-                <li><a href="../contact/contactUs.html" class="tab-link">Contact Us</a></li>
-                <li><a href="../faq/faq.html" class="tab-link">FAQs</a></li>
-                <li><a href="../shipping/shipping.html" class="tab-link">Shipping</a></li>
-                <li><a href="../sizing/sizing.html" class="tab-link">Sizing</a></li>
+                <li><a href="contactUs.html" class="tab-link">Contact Us</a></li>
+                <li><a href="faq.html" class="tab-link">FAQs</a></li>
+                <li><a href="shipping.html" class="tab-link">Shipping</a></li>
+                <li><a href="sizing.html" class="tab-link">Sizing</a></li>
             </ul>
         </div>
     
-    <script src="../java/scriptcb.js"></script> <!--Linking to the javascript file -->
+  
      
 </body>
 </html>
