--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title> House of CB | Womenswear Designed in London</title>
 <!-- Title of Webpage -->
 		<meta name="description" content="House of CB is a leading British womenswear brand, internationally acclaimed for its feminine, luxury and versatile pieces.">
-		<link rel="stylesheet" href="../style/styles.css">
-		<link rel="stylesheet" href="../style/carousel.css">
+		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="carousel.css">
 <!-- linking to css file-->
 
 
@@ -22,9 +22,9 @@
             <li class="dropdown">
                 <button class="dropbtn">Menu</button>
 				<div class="dropdown-content">
-				<a href="../products/newArrivals.html">New Arrivals</a>
-				<a href="../products/dresses">Dresses</a>
-				<a href="../products/basics">Basics</a>
+				<a href="newArrivals.html">New Arrivals</a>
+				<a href="dresses">Dresses</a>
+				<a href="basics">Basics</a>
 			</div>
 		   </li>
         </ul>
@@ -32,7 +32,7 @@
 		
 		
 		<div id="header">
-			<div id="header1"><img src="../logo/logo-black.svg" alt="Logo for House of CB's website"></div>
+			<div id="header1"><img src="logo-black.svg" alt="Logo for House of CB's website"></div>
 			</div>
 
 		<!-- Carousel Section (Slideshow for Deals) -->
@@ -69,7 +69,7 @@
       </div>
 
       <div class="item">
-        <img src="../products/house.avif" alt="New Arrivals" style="width:100%;">
+        <img src="house.avif" alt="New Arrivals" style="width:100%;">
         <div class="carousel-caption">
           <h3>New Arrivals</h3>
           <p>Shop our newest arrivals for this holiday season</p>
@@ -77,7 +77,7 @@
       </div>
     
       <div class="item">
-        <img src="../products/ohpolly2.avif" alt="Best Sellers" style="width:100%;">
+        <img src="ohpolly2.avif" alt="Best Sellers" style="width:100%;">
         <div class="carousel-caption">
           <h3>Dresses</h3>
           <p>Find the perfect dress for the special occassion here in the House Of CB!</p>
@@ -104,17 +104,17 @@
 			<div class="help-section">
 				<h3>HELP</h3>
 				<ul class="tabs">
-					<li><a href="../contact/contactUs.html" class="tab-link">Contact Us</a></li>
-					<li><a href="../faq/faq.html" class="tab-link">FAQs</a></li>
-					<li><a href="../shipping/shipping.html" class="tab-link">Shipping</a></li>
-					<li><a href="../sizing/sizing.html" class="tab-link">Sizing</a></li>
+					<li><a href="contactUs.html" class="tab-link">Contact Us</a></li>
+					<li><a href="faq.html" class="tab-link">FAQs</a></li>
+					<li><a href="shipping.html" class="tab-link">Shipping</a></li>
+					<li><a href="sizing.html" class="tab-link">Sizing</a></li>
 				</ul>
 			</div>
 			<!-- "House of CB" Section -->
 			<div class="house-of-cb-section">
 				<h3>House of CB</h3>
 				<ul class="tabs">
-					<li><a href="../about/aboutUs.html" class="tab-link">About Us</a></li>
+					<li><a href="aboutUs.html" class="tab-link">About Us</a></li>
 				</ul>
 			</div>
 
@@ -124,7 +124,7 @@
 
 
 
-		<script src="../javacb/Script.js"></script>
+		
 	</body>
 </html>
 
