--- a/shipping.html
+++ b/shipping.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shipping Information</title>
-    <link rel="stylesheet" href="../style/styleship.css"> <!-- Link to your stylesheet -->
+    <link rel="stylesheet" href="styleship.css"> <!-- Link to your stylesheet -->
 </head>
 	<body>
 		<div id="logo-container">
@@ -12,16 +12,16 @@
 				<!-- Logo at the top left corner of the Contact page -->
 			<div id="header-logo">
 			<!-- Wrap the logo in an anchor tag linking to the homepage -->
-				<a href="../main/index.html"> 
-				<img src="../logo/logo-black.svg" alt="House of CB's Logo" class="logo"/>
+				<a href="index.html"> 
+				<img src="logo-black.svg" alt="House of CB's Logo" class="logo"/>
 				</a>
 			</div>
 		</div>
 			<div class="nav-tabs">
 				<ul class="nav-links">
-				 <li><a href="../products/newArrivals.html">New Arrivals</a></li>
-				<li><a href="../products/dresses.html">Dresses</a></li>
-				<li><a href="../products/basics.html">Basics</a></li>
+				 <li><a href="newArrivals.html">New Arrivals</a></li>
+				<li><a href="dresses.html">Dresses</a></li>
+				<li><a href="basics.html">Basics</a></li>
 				</ul>
 			</div>	
 
@@ -29,7 +29,7 @@
 			<div class="content-container">
 			<!-- Left side image -->
 				<div class="shipping-image">
-					<img src="../images/cb/faq.avif" alt="Shipping Image for House of CB's Shipping Page" class="shipping-image"/>
+					<img src="faq.avif" alt="Shipping Image for House of CB's Shipping Page" class="shipping-image"/>
 				</div>
 
 			<div class="shipping-info-container">
@@ -231,17 +231,17 @@
         <div class="help-section">
             <h3>HELP</h3>
             <ul class="tabs">
-                <li><a href="../contact/contactUs.html" class="tab-link">Contact Us</a></li>
-                <li><a href="../faq/faq.html" class="tab-link">FAQs</a></li>
-                <li><a href="../shipping/shipping.html" class="tab-link">Shipping</a></li>
-                <li><a href="../sizing/sizing.html" class="tab-link">Sizing</a></li>
+                <li><a href="contactUs.html" class="tab-link">Contact Us</a></li>
+                <li><a href="faq.html" class="tab-link">FAQs</a></li>
+                <li><a href="shipping.html" class="tab-link">Shipping</a></li>
+                <li><a href="sizing.html" class="tab-link">Sizing</a></li>
             </ul>
         </div>
 		<!-- "House of CB" Section -->
 			<div class="house-of-cb-section">
 				<h3>House of CB</h3>
 				<ul class="tabs">
-					<li><a href="../about/aboutUs.html" class="tab-link">About Us</a></li>
+					<li><a href="aboutUs.html" class="tab-link">About Us</a></li>
 				</ul>
 			</div>
 
