--- a/sizing.html
+++ b/sizing.html
@@ -13,7 +13,7 @@
 		<title>Size Guide</title>
         <!-- Title of the webpage -->
 
-		<link rel="stylesheet" href="../style/stylesize.css"/>
+		<link rel="stylesheet" href="stylesize.css"/>
         <!-- Linking this page to the css page for styling purposes -->   
 
 	</head>
@@ -23,16 +23,16 @@
 			<!-- Logo at the top left corner of the Contact page -->
 		<div id="contact-header-logo">
 		<!-- Wrap the logo in an anchor tag linking to the homepage -->
-			<a href="../main/index.html"> 
-			<img src="../logo/logo-black.svg" alt="House of CB's Logo" class="logo"/>
+			<a href="index.html"> 
+			<img src="logo-black.svg" alt="House of CB's Logo" class="logo"/>
 			</a>
 		</div>
     </div>
 		<div class="nav-tabs">
 			<ul class="nav-links">
-			 <li><a href="../products/newArrivals.html">New Arrivals</a></li>
-            <li><a href="../products/dresses.html">Dresses</a></li>
-            <li><a href="../products/basics.html">Basics</a></li>
+			 <li><a href="newArrivals.html">New Arrivals</a></li>
+            <li><a href="dresses.html">Dresses</a></li>
+            <li><a href="basics.html">Basics</a></li>
 			</ul>
 		</div>	
 	<!-- Creating a link for all the relevant tabs -->
@@ -43,7 +43,7 @@
 
     <!-- Sizing Image -->
     <div class="sizing-image">
-      <img src="../images/cb/sizingimg.svg" alt="Dress Size Guide">
+      <img src="sizingimg.svg" alt="Dress Size Guide">
     </div>
 
 <!-- Bottom Container with HELP Section -->
@@ -51,21 +51,20 @@
         <div class="help-section">
             <h3>HELP</h3>
             <ul class="tabs">
-                <li><a href="../contact/contactUs.html" class="tab-link">Contact Us</a></li>
-                <li><a href="../faq/faq.html" class="tab-link">FAQs</a></li>
-                <li><a href="../shipping/shipping.html" class="tab-link">Shipping</a></li>
-                <li><a href="../sizing/sizing.html" class="tab-link">Sizing</a></li>
+                <li><a href="contactUs.html" class="tab-link">Contact Us</a></li>
+                <li><a href="faq.html" class="tab-link">FAQs</a></li>
+                <li><a href="shipping.html" class="tab-link">Shipping</a></li>
+                <li><a href="sizing.html" class="tab-link">Sizing</a></li>
             </ul>
 			<!-- "House of CB" Section -->
 			<div class="house-of-cb-section">
 				<h3>House of CB</h3>
 				<ul class="tabs">
-					<li><a href="../about/aboutUs.html" class="tab-link">About Us</a></li>
+					<li><a href="aboutUs.html" class="tab-link">About Us</a></li>
 				</ul>
 			</div>	
         </div>
     
-    <script src="../java/scriptcb.js"></script> <!--Linking to the javascript file -->
      
 </body>
 </html>
