--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <li class="dropdown">
                 <button class="dropbtn">Menu</button>
 				<div class="dropdown-content">
-				<a href="newArrivals.html">New Arrivals</a>
-				<a href="dresses">Dresses</a>
-				<a href="basics">Basics</a>
+				<a href="NewArrivals.html">New Arrivals</a>
+				<a href="Dresses.html">Dresses</a>
+				<a href="Basics.html">Basics</a>
 			</div>
 		   </li>
         </ul>
@@ -61,7 +61,7 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <img src="../products/house_black.avif" alt="Black Friday" style="width:100%;">
+        <img src="house_black.avif" alt="Black Friday" style="width:100%;">
         <div class="carousel-caption">
           <h3>Black Friday!</h3>
           <p>Up to 20% off on selected items in this Black Friday Sale</p>
