--- a/Basics.html
+++ b/Basics.html
@@ -1,5 +1,4 @@
 
-	  <li><a href="../products/Basics.html">Basics</a></li>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,8 +20,8 @@
 	 
     <div class="nav-tabs">
         <ul class="nav-links">
-            <li><a href="products/newArrivals.html">New Arrivals</a></li>
-            <li><a href="products/dresses.html">Dresses</a></li>
+            <li><a href="NewArrivals.html">New Arrivals</a></li>
+            <li><a href="Dresses.html">Dresses</a></li>
         </ul>
 	</div>	
 </header>
@@ -63,7 +62,7 @@
 			<p class="item-price">GBP £59.00</p> <!-- Item price in Garamond -->	
 		</div>
 		<div class="item">
-			<img src="../images/cb/cbb15.avif" alt="Item 5"/>
+			<img src="cbb15.avif" alt="Item 5"/>
 			<h2 class="item-name">Rene</h2> <!-- Item name in Garamond -->
     
 			<p class="item-description">Black Chenille Two Piece Set...</p> <!-- Item description in Garamond Italic -->
