--- a/Dresses.html
+++ b/Dresses.html
@@ -20,8 +20,8 @@
 	 
     <div class="nav-tabs">
         <ul class="nav-links">
-            <li><a href="newArrivals.html">New Arrivals</a></li>
-            <li><a href="basics.html">Basics</a></li>
+            <li><a href="NewArrivals.html">New Arrivals</a></li>
+            <li><a href="Basics.html">Basics</a></li>
         </ul>
 	</div>	
 </header>
