--- a/NewArrivals.html
+++ b/NewArrivals.html
@@ -20,8 +20,8 @@
 	 
     <div class="nav-tabs">
         <ul class="nav-links">
-            <li><a href="dresses.html">Dresses</a></li>
-            <li><a href="basics.html">Basics</a></li>
+            <li><a href="Dresses.html">Dresses</a></li>
+            <li><a href="Basics.html">Basics</a></li>
         </ul>
 	</div>	
 </header>
