--- a/faq.html
+++ b/faq.html
@@ -19,9 +19,9 @@
 		</div>
 			<div class="nav-tabs">
 				<ul class="nav-links">
-				 <li><a href="newArrivals.html">New Arrivals</a></li>
-				<li><a href="dresses.html">Dresses</a></li>
-				<li><a href="basics.html">Basics</a></li>
+				 <li><a href="NewArrivals.html">New Arrivals</a></li>
+				<li><a href="Dresses.html">Dresses</a></li>
+				<li><a href="Basics.html">Basics</a></li>
 				</ul>
 			</div>	
 
