--- a/sizing.html
+++ b/sizing.html
@@ -30,7 +30,7 @@
     </div>
 		<div class="nav-tabs">
 			<ul class="nav-links">
-			 <li><a href="newArrivals.html">New Arrivals</a></li>
+			 <li><a href="NewArrivals.html">New Arrivals</a></li>
             <li><a href="dresses.html">Dresses</a></li>
             <li><a href="basics.html">Basics</a></li>
 			</ul>
